--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,10 +25,12 @@
         <div class="character_card">
             <div class="character_header"></div>
             <div class="character_img">
-                <img src="images/1.jpg">
+                <img src="https://i.imgur.com/FU4y4F2.jpg">
             </div>
             <div class="title_info">Name</div>
             <div class="title_details">Rick Sanchez</div>
+            
+            </div>
         </div>
     </div>
 
